--- a/devel/hs-foldl/Makefile
+++ b/devel/hs-foldl/Makefile
@@ -1,21 +1,23 @@
-# $NetBSD: Makefile,v 1.10 2024/05/09 01:31:55 pho Exp $
+# $NetBSD: Makefile,v 1.11 2025/01/31 05:15:16 pho Exp $
 
-DISTNAME=	foldl-1.4.16
-PKGREVISION=	1
+DISTNAME=	foldl-1.4.18
 CATEGORIES=	devel
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Composable, streaming, and efficient left folds
 LICENSE=	modified-bsd
 
-.include "../../math/hs-comonad/buildlink3.mk"
-.include "../../math/hs-contravariant/buildlink3.mk"
-.include "../../devel/hs-hashable/buildlink3.mk"
-.include "../../devel/hs-primitive/buildlink3.mk"
-.include "../../math/hs-profunctors/buildlink3.mk"
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	random
+
 .include "../../devel/hs-random/buildlink3.mk"
-.include "../../math/hs-semigroupoids/buildlink3.mk"
-.include "../../devel/hs-unordered-containers/buildlink3.mk"
+.include "../../devel/hs-primitive/buildlink3.mk"
 .include "../../devel/hs-vector/buildlink3.mk"
+.include "../../devel/hs-unordered-containers/buildlink3.mk"
+.include "../../devel/hs-hashable/buildlink3.mk"
+.include "../../math/hs-contravariant/buildlink3.mk"
+.include "../../math/hs-profunctors/buildlink3.mk"
+.include "../../math/hs-semigroupoids/buildlink3.mk"
+.include "../../math/hs-comonad/buildlink3.mk"
 .include "../../mk/haskell.mk"
 .include "../../mk/bsd.pkg.mk"
