--- a/devel/hs-hie-compat/Makefile
+++ b/devel/hs-hie-compat/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.9 2024/05/09 01:31:58 pho Exp $
+# $NetBSD: Makefile,v 1.10 2025/01/31 06:52:09 pho Exp $
 
 DISTNAME=	hie-compat-0.3.1.2
 PKGREVISION=	1
@@ -7,6 +7,9 @@ CATEGORIES=	devel
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	HIE files for GHC 8.6 and other HIE file backports
 LICENSE=	apache-2.0
+
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	base
 
 .include "../../mk/haskell.mk"
 .include "../../mk/bsd.pkg.mk"
