--- a/devel/hs-quickcheck-instances/Makefile
+++ b/devel/hs-quickcheck-instances/Makefile
@@ -1,17 +1,14 @@
-# $NetBSD: Makefile,v 1.2 2024/05/09 01:32:08 pho Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/31 08:04:16 pho Exp $
 
-DISTNAME=	quickcheck-instances-0.3.30
-PKGREVISION=	1
+DISTNAME=	quickcheck-instances-0.3.32
 CATEGORIES=	devel
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-COMMENT=	Common QuickCheck instances
+COMMENT=	Common quickcheck instances
 LICENSE=	modified-bsd
 
-HASKELL_UNRESTRICT_DEPENDENCIES+=	\
-	QuickCheck	\
-	primitive
-
+.include "../../devel/hs-QuickCheck/buildlink3.mk"
+.include "../../devel/hs-splitmix/buildlink3.mk"
 .include "../../textproc/hs-case-insensitive/buildlink3.mk"
 .include "../../devel/hs-data-fix/buildlink3.mk"
 .include "../../devel/hs-hashable/buildlink3.mk"
@@ -19,17 +16,14 @@ HASKELL_UNRESTRICT_DEPENDENCIES+=	\
 .include "../../time/hs-old-time/buildlink3.mk"
 .include "../../devel/hs-OneTuple/buildlink3.mk"
 .include "../../devel/hs-primitive/buildlink3.mk"
-.include "../../devel/hs-QuickCheck/buildlink3.mk"
 .include "../../math/hs-scientific/buildlink3.mk"
-.include "../../devel/hs-splitmix/buildlink3.mk"
 .include "../../devel/hs-strict/buildlink3.mk"
 .include "../../devel/hs-tagged/buildlink3.mk"
+.include "../../textproc/hs-text-short/buildlink3.mk"
 .include "../../devel/hs-these/buildlink3.mk"
 .include "../../time/hs-time-compat/buildlink3.mk"
-.include "../../devel/hs-transformers-compat/buildlink3.mk"
 .include "../../devel/hs-unordered-containers/buildlink3.mk"
 .include "../../devel/hs-uuid-types/buildlink3.mk"
 .include "../../devel/hs-vector/buildlink3.mk"
-.include "../../textproc/hs-text-short/buildlink3.mk"
 .include "../../mk/haskell.mk"
 .include "../../mk/bsd.pkg.mk"
