--- a/devel/hs-uuid/Makefile
+++ b/devel/hs-uuid/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.8 2024/05/09 01:32:18 pho Exp $
+# $NetBSD: Makefile,v 1.9 2025/01/31 09:06:48 pho Exp $
 
-DISTNAME=	uuid-1.3.15
-PKGREVISION=	5
+DISTNAME=	uuid-1.3.16
 CATEGORIES=	devel
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -9,9 +8,7 @@ COMMENT=	For creating, comparing, parsing and printing UUIDs
 LICENSE=	modified-bsd
 
 HASKELL_UNRESTRICT_DEPENDENCIES+=	\
-	bytestring	\
-	text		\
-	time
+	random
 
 .include "../../security/hs-cryptohash-md5/buildlink3.mk"
 .include "../../security/hs-cryptohash-sha1/buildlink3.mk"
