--- a/devel/hs-hls-plugin-api/Makefile
+++ b/devel/hs-hls-plugin-api/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.11 2024/05/09 01:31:59 pho Exp $
+# $NetBSD: Makefile,v 1.12 2025/01/31 10:07:23 pho Exp $
 
-DISTNAME=	hls-plugin-api-2.7.0.0
-PKGREVISION=	1
+DISTNAME=	hls-plugin-api-2.9.0.0
 CATEGORIES=	devel
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -9,8 +8,7 @@ COMMENT=	Haskell Language Server API for plugin communication
 LICENSE=	apache-2.0
 
 HASKELL_UNRESTRICT_DEPENDENCIES+=	\
-	Diff	\
-	lsp
+	Diff
 
 .include "../../converters/hs-aeson/buildlink3.mk"
 .include "../../sysutils/hs-co-log-core/buildlink3.mk"
