--- a/devel/ormolu/Makefile
+++ b/devel/ormolu/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.11 2024/05/09 01:32:20 pho Exp $
+# $NetBSD: Makefile,v 1.12 2025/01/31 10:34:51 pho Exp $
 
-DISTNAME=	ormolu-0.7.4.0
+DISTNAME=	ormolu-0.7.7.0
 PKGNAME=	${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	devel
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -10,18 +9,20 @@ COMMENT=	Formatter for Haskell source code
 LICENSE=	modified-bsd
 
 HASKELL_UNRESTRICT_DEPENDENCIES+=	\
-	ansi-terminal
+	Diff
 
 # lib:ormolu
-.include "../../devel/hs-ansi-terminal/buildlink3.mk"
 .include "../../textproc/hs-Diff/buildlink3.mk"
+.include "../../devel/hs-memotrie/buildlink3.mk"
+.include "../../devel/hs-ansi-terminal/buildlink3.mk"
+.include "../../devel/hs-choice/buildlink3.mk"
 .include "../../devel/hs-file-embed/buildlink3.mk"
 .include "../../devel/hs-ghc-lib-parser/buildlink3.mk"
 .include "../../textproc/hs-megaparsec/buildlink3.mk"
-.include "../../devel/hs-memotrie/buildlink3.mk"
 .include "../../devel/hs-syb/buildlink3.mk"
 
 # exe:ormolu
+.include "../../devel/hs-ghc-lib-parser/buildlink3.mk"
 .include "../../devel/hs-optparse-applicative/application.mk"
 .include "../../devel/hs-th-env/buildlink3.mk"
 
