--- a/devel/hs-MonadRandom/Makefile
+++ b/devel/hs-MonadRandom/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2024/05/09 01:31:44 pho Exp $
+# $NetBSD: Makefile,v 1.17 2025/01/31 10:41:38 pho Exp $
 
 DISTNAME=	MonadRandom-0.6
 PKGREVISION=	4
@@ -9,8 +9,7 @@ COMMENT=	Random-number generation monad
 LICENSE=	2-clause-bsd
 # http://www.haskell.org/haskellwiki/HaskellWiki:Copyrights
 
-HASKELL_UNRESTRICT_DEPENDENCIES+=	\
-	primitive
+BROKEN+=	"Broken due to an incompatibility with random-1.3.0: https://github.com/byorgey/MonadRandom/issues/54"
 
 .include "../../devel/hs-primitive/buildlink3.mk"
 .include "../../devel/hs-random/buildlink3.mk"
