--- a/textproc/hs-clay/Makefile
+++ b/textproc/hs-clay/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2024/05/09 01:32:40 pho Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/31 10:56:18 pho Exp $
 
 DISTNAME=	clay-0.15.0
 PKGREVISION=	1
@@ -8,6 +8,9 @@ MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://fvisser.nl/clay/
 COMMENT=	CSS preprocessor as embedded Haskell
 LICENSE=	modified-bsd
+
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	base
 
 .include "../../mk/haskell.mk"
 .include "../../mk/bsd.pkg.mk"
