--- a/textproc/hs-tomland/Makefile
+++ b/textproc/hs-tomland/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.2 2024/05/09 01:32:48 pho Exp $
+# $NetBSD: Makefile,v 1.3 2025/01/31 11:00:26 pho Exp $
 
-DISTNAME=	tomland-1.3.3.2
-PKGREVISION=	1
+DISTNAME=	tomland-1.3.3.3
 CATEGORIES=	textproc
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -9,13 +8,8 @@ COMMENT=	Bidirectional TOML serialization
 LICENSE=	mpl-2.0
 
 HASKELL_UNRESTRICT_DEPENDENCIES+=	\
-	base		\
-	bytestring	\
-	deepseq		\
-	megaparsec	\
-	mtl		\
-	text		\
-	validation-selective
+	hashable	\
+	megaparsec
 
 .include "../../devel/hs-hashable/buildlink3.mk"
 .include "../../textproc/hs-megaparsec/buildlink3.mk"
