--- a/textproc/hs-HsYAML-aeson/Makefile
+++ b/textproc/hs-HsYAML-aeson/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2024/05/09 01:32:38 pho Exp $
+# $NetBSD: Makefile,v 1.11 2025/01/31 11:11:17 pho Exp $
 
 DISTNAME=	HsYAML-aeson-0.2.0.1
 PKGREVISION=	6
@@ -12,6 +12,7 @@ HASKELL_UNRESTRICT_DEPENDENCIES+=	\
 	aeson	\
 	base	\
 	bytestring	\
+	containers	\
 	mtl	\
 	text	\
 	vector
