--- a/x11/kf6-kwindowsystem/Makefile
+++ b/x11/kf6-kwindowsystem/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2024/12/05 09:43:28 markd Exp $
+# $NetBSD: Makefile,v 1.8 2025/01/31 11:52:42 wiz Exp $
 
 DISTNAME=	kwindowsystem-${KF6VER}
+PKGREVISION=	1
 CATEGORIES=	x11
 
 HOMEPAGE=	https://community.kde.org/Frameworks
@@ -13,6 +14,14 @@ USE_TOOLS+=	pkg-config
 
 PKGCONFIG_OVERRIDE+=		_KDE_build/KF6WindowSystem.pc
 PKGCONFIG_OVERRIDE_STAGE=	post-build
+
+SUBST_CLASSES+=		path
+SUBST_SED.path+=	-e "s,${BUILDLINK_DIR}/include,${BUILDLINK_PREFIX.libX11}/include,"
+SUBST_SED.path+=	-e "s,-I${BUILDLINK_DIR}/include,-I${BUILDLINK_PREFIX.libX11}/include,"
+SUBST_FILES.path+=	_KDE_build/CMakeFiles/Export/*/KF6WindowSystemTargets.cmake
+SUBST_FILES.path+=	_KDE_build/KF6WindowSystem.pc
+SUBST_MESSAGE.path=	Fixing path to libX11 in installed file.
+SUBST_STAGE.path=	post-build
 
 .include "../../devel/plasma-wayland-protocols/buildlink3.mk"
 .include "../../devel/qt6-qttools/buildlink3.mk"
