--- a/databases/diesel-cli/Makefile
+++ b/databases/diesel-cli/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.11 2024/11/14 22:18:59 wiz Exp $
+# $NetBSD: Makefile,v 1.12 2025/01/31 12:29:17 pin Exp $
 
-DISTNAME=	diesel-cli-2.2.4
-PKGREVISION=	3
+DISTNAME=	diesel-cli-2.2.7
 CATEGORIES=	databases
 MASTER_SITES=	${MASTER_SITE_GITHUB:=diesel-rs/}
 GITHUB_PROJECT=	diesel
