--- a/devel/glasgow/Makefile
+++ b/devel/glasgow/Makefile
@@ -1,23 +1,18 @@
-# $NetBSD: Makefile,v 1.4 2024/11/11 07:27:59 wiz Exp $
+# $NetBSD: Makefile,v 1.5 2025/01/31 12:52:28 wiz Exp $
 
 # There are no release tags for glasgow
-GLASGOW_VERSION=	0.0.20240810
-
-DISTNAME=	glasgow-${GLASGOW_VERSION}
+DISTNAME=	glasgow-0.0.20240810
 PKGREVISION=	1
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_GITHUB:=GlasgowEmbedded/}
 GITHUB_TAG=	60736dc71c02b9ba042e1f080fd3565c374e8458
-CATEGORIES=	devel
-PYSETUPSUBDIR=	software
 
 MAINTAINER=	js@NetBSD.org
 HOMEPAGE=	https://glasgow-embedded.org/
 COMMENT=	Software for the Glasgow Interface Explorer
 LICENSE=	0-clause-bsd OR apache-2.0
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm>=6.2:../../devel/py-setuptools_scm
+TOOL_DEPENDS+=	${PYPKGPREFIX}-pdm_backend-[0-9]*:../../devel/py-pdm_backend
 DEPENDS+=	${PYPKGPREFIX}-typing-extensions>=4.8<5:../../devel/py-typing-extensions
 DEPENDS+=	${PYPKGPREFIX}-amaranth>=0.5.1<0.6:../../devel/py-amaranth
 DEPENDS+=	${PYPKGPREFIX}-packaging>=23.0:../../devel/py-packaging
@@ -28,13 +23,13 @@ DEPENDS+=	yosys>=0.31.0.13:../../devel/yosys
 DEPENDS+=	nextpnr-ice40>=0.1:../../devel/nextpnr-ice40
 DEPENDS+=	${PYPKGPREFIX}-aiohttp>=3.9.0:../../www/py-aiohttp
 DEPENDS+=	${PYPKGPREFIX}-aiohttp-remotes>=1.2<2:../../www/py-aiohttp-remotes
-BUILD_DEPENDS+= ${PYPKGPREFIX}-pdm>=2.3.0<3.0:../../devel/py-pdm
+BUILD_DEPENDS+=	${PYPKGPREFIX}-pdm>=2.3.0<3.0:../../devel/py-pdm
 
 USE_LANGUAGES=	# none
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
+PYSETUPSUBDIR=	software
 
-MAKE_ENV+=	PDM_BUILD_SCM_VERSION=${PKGVERSION}
+MAKE_ENV+=	PDM_BUILD_SCM_VERSION=${PKGVERSION_NOREV}
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
