--- a/devel/hs-generic-deriving/Makefile
+++ b/devel/hs-generic-deriving/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.14 2024/05/09 01:31:55 pho Exp $
+# $NetBSD: Makefile,v 1.15 2025/01/31 13:15:44 pho Exp $
 
-DISTNAME=	generic-deriving-1.14.5
-PKGREVISION=	2
+DISTNAME=	generic-deriving-1.14.6
 CATEGORIES=	devel
 
 MAINTAINER=	szptvlfn@NetBSD.org
@@ -9,8 +8,10 @@ COMMENT=	Generic programming library for generalised deriving
 LICENSE=	modified-bsd
 
 HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	containers	\
+	template-haskell	\
 	th-abstraction
 
-.include "../../mk/haskell.mk"
 .include "../../devel/hs-th-abstraction/buildlink3.mk"
+.include "../../mk/haskell.mk"
 .include "../../mk/bsd.pkg.mk"
