--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4401 2025/01/31 02:51:43 pho Exp $
+# $NetBSD: Makefile,v 1.4402 2025/01/31 13:54:07 pho Exp $
 #
 
 COMMENT=	Development utilities
@@ -581,6 +581,7 @@ SUBDIR+=	hs-colourista
 SUBDIR+=	hs-concurrent-output
 SUBDIR+=	hs-conduit
 SUBDIR+=	hs-conduit-extra
+SUBDIR+=	hs-conduit-parse
 SUBDIR+=	hs-constraints
 SUBDIR+=	hs-constraints-extras
 SUBDIR+=	hs-control-monad-free
