--- a/databases/mysql75-cluster/Makefile
+++ b/databases/mysql75-cluster/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2024/12/29 15:09:43 adam Exp $
+# $NetBSD: Makefile,v 1.12 2025/01/31 14:08:16 wiz Exp $
 
 PKGNAME=		${DISTNAME:S/-gpl//}
 PKGREVISION=		9
@@ -6,6 +6,8 @@ PKGREVISION=		9
 COMMENT=		MySQL Cluster 7.5, a free SQL clustered database
 
 CONFLICTS=		mysql*-{client,server}-[0-9]*
+
+BROKEN=			"Needs fixing for boost 1.87+"
 
 .include "Makefile.common"
 
