--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4403 2025/01/31 14:01:59 pho Exp $
+# $NetBSD: Makefile,v 1.4404 2025/01/31 14:14:30 pho Exp $
 #
 
 COMMENT=	Development utilities
@@ -640,6 +640,7 @@ SUBDIR+=	hs-hashable
 SUBDIR+=	hs-hashtables
 SUBDIR+=	hs-haskell-lexer
 SUBDIR+=	hs-haskell-src-exts
+SUBDIR+=	hs-heaps
 SUBDIR+=	hs-heapsize
 SUBDIR+=	hs-hfsevents
 SUBDIR+=	hs-hie-bios
