--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4405 2025/01/31 14:23:21 pho Exp $
+# $NetBSD: Makefile,v 1.4406 2025/01/31 14:35:36 pho Exp $
 #
 
 COMMENT=	Development utilities
@@ -760,6 +760,7 @@ SUBDIR+=	hs-syb
 SUBDIR+=	hs-tabular
 SUBDIR+=	hs-tagged
 SUBDIR+=	hs-tasty
+SUBDIR+=	hs-tasty-expected-failure
 SUBDIR+=	hs-tasty-hunit
 SUBDIR+=	hs-tasty-quickcheck
 SUBDIR+=	hs-tasty-rerun
