--- a/devel/Makefile
+++ b/devel/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4407 2025/01/31 14:39:45 pho Exp $
+# $NetBSD: Makefile,v 1.4408 2025/01/31 14:47:09 pho Exp $
 #
 
 COMMENT=	Development utilities
@@ -650,6 +650,7 @@ SUBDIR+=	hs-hinotify
 SUBDIR+=	hs-hint
 SUBDIR+=	hs-hls-graph
 SUBDIR+=	hs-hls-plugin-api
+SUBDIR+=	hs-hls-test-utils
 SUBDIR+=	hs-hslua-module-system
 SUBDIR+=	hs-hslua-module-version
 SUBDIR+=	hs-hw-fingertree
